--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     align-items: center;
     background: linear-gradient(135deg, #6E71F5, #6EDB8B, #E8C868);
     display: flex;
-    font-family: 'NEON CLUB MUSIC', sans-serif;
+    font-family: 'Orbitron', sans-serif;
     font-display: swap;
     height: inherit;
     justify-content: center;
